--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\mgeoh\\AppData\\Roaming\\NetBeans\\14\\tomcat90.properties
 j2ee.server.home=C:/Users/mgeoh/Documents/apache-tomcat-10.0.22
 j2ee.server.instance=tomcat90:home=C:\\Users\\mgeoh\\Documents\\apache-tomcat-10.0.22
+selected.browser=Chrome.INTEGRATED
 user.properties.file=C:\\Users\\mgeoh\\AppData\\Roaming\\NetBeans\\14\\build.properties
